# netmuncher

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  rustfmt.toml
doc/: book.toml
doc/src/: SUMMARY.md  first-circuit.md  installation.md  introduction.md
src/: circuit.rs  erc.rs  error.rs  instantiator.rs  lib.rs  main.rs  ref_gen.rs
src/circuit/: erc.rs  instantiator.rs  mod.rs  serialize_dot.rs  serialize_json.rs  serialize_kicad.rs
src/diagram/: compile.rs  data.rs  mod.rs
src/parse/: ast.rs  component.rs  grammar.lalrpop  mod.rs  source.rs  src_tag.rs  src_unit.rs  token.rs  validate.rs  validator.rs
tests/: error_cases.rs  valid_cases.rs
tests/diagram/: units.json
tests/errors/: abstract_component_no_pin_num.nm  abstract_footprint.nm  abstract_prefix.nm  cannot_find_connection.nm  concrete_component_require_pin_num.nm  connect_nets.nm  duplicate_component.nm  duplicate_footprint.nm  duplicate_instance_value.nm  duplicate_net.nm  duplicate_pin.nm  duplicate_pin_number.nm  duplicate_prefix.nm  empty_circuit.nm  erc_error.nm  erc_global_net_error.nm  erc_local_net_error.nm  erc_pin_to_pin_error.nm  footprint_required.nm  invalid_quoted_symbol.nm  missing_component.nm  missing_connection.nm  missing_main.nm  missing_mapped_net.nm  missing_pins.nm  multiple_unit_specs.nm  no_instances_on_dumb_component.nm  no_nets_on_dumb_component.nm  no_pins_in_main.nm  prefix_required.nm  require_doesnt_exist.nm  single_node_in_net.nm  uneven_units.nm  unexpected_token.nm  unit_minimum_one_pin.nm  (+2 more)
vscode_extension/: language-configuration.json  package.json
(+16 files in other folders)
