[package]
name = "netmuncher"
version = "0.5.0"
authors = ["John DiSanti <johndisanti@gmail.com>"]
license = "MIT OR Apache-2.0"

[build-dependencies]
lalrpop = "0.13"

[dependencies]
clap = "2.29"
derive-new = "0.5"
error-chain = "0.11"
lalrpop-util = "0.13"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"